@@ -1,0 +1,6 @@
+/*
+    This file is generated just to tell build scripts that WebDOMTestSupplemental.h and
+    WebDOMTestSupplemental.cpp are created for TestSupplemental.idl, and thus
+    prevent the build scripts from trying to generate WebDOMTestSupplemental.h and
+    WebDOMTestSupplemental.cpp at every build. This file must not be tried to compile.
+*/
