@@ -1,0 +1,6 @@
+/*
+    This file is generated just to tell build scripts that DOMTestSupplemental.h and
+    DOMTestSupplemental.cpp are created for TestSupplemental.idl, and thus
+    prevent the build scripts from trying to generate DOMTestSupplemental.h and
+    DOMTestSupplemental.cpp at every build. This file must not be tried to compile.
+*/
